academy reforge/test.css
* {
    box-sizing: border-box;
}

body {
    margin: 0; 
    background-color: #181818;
    color: whitesmoke;
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}

/* div {
    border: 1px blue solid ;
} */

.header{
    overflow: hidden;
    display: flex;
    justify-content: center;
    height: 80px;
    padding: 10px;
}

.header .container{
    width: 1000px;
}

.header .container .logo{
    padding: 5px ;
    float: left;
    cursor: pointer;
}

.header .container .nav-to-right{
    float: right;
    align-content: flex-end;
}

.header .container .nav-to-right .nav-container{
    height: 60px;
    display: flex;
    align-items: flex-end;
}

.header .container .nav-to-right .nav-container a{
    padding-left: 40px;
    text-decoration: none;
}

.header .container .nav-to-right .nav-container a:hover{
    color: orange;
    cursor: pointer;
    transition-duration: 0.5s;
}

/* -------------------------SLIDESHOW-PROGRAMS------------------------------- */
.slideshow{
    overflow: hidden;
    height: 500px;
}

.slideshow .container{
    display: flex;
    justify-content: center;
}

.slideshow .container .slide-content{
    height: 500px;
    width: 1000px;
    display: flex;
}

.slideshow .container .slide-content .slide-imgs{
    position: absolute;
    z-index: 0;
}

.slideshow .container .slide-content .slide-imgs div{
    width: 1000px;
    height: 500px;
    background-color: whitesmoke;
    border-radius: 10px;
}

.slideshow .container .slide-content .slide-imgs .slide-img{
    display: none;
}

/* ---------------------------------------- */

.img_holder{
    max-width: 700px;
}

.course_container{
    display: flex;
}

.text_holder{
    display: flex;
    flex-direction: column;
    color: black;
    text-align: center;
}


.text_holder p{
    text-align: justify;
}

.text{
    color: black;
    max-width: 300px;
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    margin-left: 5px;
    margin-right: 15px;
    font-weight: bold;
}   

.read-more{
    color: black;
    max-width: 300px;
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}

.read-more a{
    background-color: orange;
    padding: 10px;
    padding-left: 30px;
    padding-right: 30px;
    border-radius: 10px;
    color: black;
    font-weight: bold;
    text-decoration: none;
    justify-content: center;
}


a :visited{
    color: black;
    text-decoration: none;
}


#course_img{
    margin: 10px;
    width: 680px;
    height: 480px;
    border-radius: 10px;
}




/* ---------------------------------------- */

.slideshow .container .slide-content .slide-function-container{
    display: bloack;
    width: 1000px;
    height: fit-content;
    z-index: 1;
}

.slideshow .container .slide-content .slide-function-container div.position:nth-child(1){
    float: left;
}

.slideshow .container .slide-content .slide-function-container div.position:nth-child(2){
    float: right;
}

.slideshow .container .slide-content .slide-function-container div.position:nth-child(3){
    display: flex;
    justify-content: center;
    clear: both;
    transform: translateY(440px);
}

.slideshow .container .slide-content .slide-function-container div button{
    color: whitesmoke;
    background-color: #181818;
    border: none;
    width: 20px;
    height: 30px;
    cursor: pointer;
    transform: translateY(220px);
}

.slideshow .container .slide-content .slide-function-container div button:hover{
    color: orange;
}

/* .slideshow .container .slide-content .slide-function-container .left-part{
    height: 500px;
    width: 500px;
    display: flex;
    align-items: center;
    justify-content: flex-start;
}

.slideshow .container .slide-content .slide-function-container .right-part{
    height: 500px;
    width: 500px;
    display: flex;
    align-items: center;
    justify-content: flex-end;
} */

.slideshow .container .slide-content .slide-function-container div .bot-bulletpoint{
    display: flex;
    width: fit-content;
    height: fit-content;
}

.slideshow .container .slide-content .slide-function-container div .bot-bulletpoint .dot{
    cursor: pointer;
    height: 15px;
    width: 15px;
    margin: 0 2px;
    background-color: gray;
    border-radius: 50%;
    display: inline-block;
    transition: background-color 0.6s ease;
}

.slideshow .container .slide-content .slide-function-container div .bot-bulletpoint .dot:hover{
    background-color: orange;
}

.slideshow .container .slide-content .slide-function-container div .bot-bulletpoint .active-dot{
    background-color: orange;
}
/* -------------------------SLIDESHOW-PROGRAMS------------------------------- */


/* -------------------------content general------------------------------- */
.content{
    background-color: #efefef;
    display: flex;
    justify-content: center;
}

.content .container{
    width: 1000px;
    height: fit-content;
    background-color: #363636;
    border-radius: 20px;
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

.content-break{
    background-color: #efefef;
    height: 25px;
}

.content .container .learn-more-button{
    width: 1000px;
    text-align: center;
}

.content .container .learn-more-button a{
    text-decoration: none;
    color: whitesmoke;
}

.content .container .learn-more-button a:hover{
    color: orange;
}
/* -------------------------content general------------------------------- */


/* -------------------------about us------------------------------- */
.content .container .about-us-heading{
    width: 1000px;
    text-align: center;
    color: orange;
}

.content .container .content-box-warpper{
    width: 1000px;
    display: flex;
}

.content .container .content-box{
    width: 250px;
    height: 300px;
}
/* -------------------------about us------------------------------- */


/* -------------------------Testimonials------------------------------- */
.content .container .quotes-box{
    display: flex;
}

.content .container .quotes-box .image{
    width: 600px;
    height: 300px;
}

.content .container .quotes-box .quote{
    width: 400px;
    height: 300px;
}
/* -------------------------Testimonials------------------------------- */


/* -------------------------faqs------------------------------- */
.content .container{
    
}

.content .container .faqs-heading{
    text-align: center;
    color: orange;
}

.content .container .faqs-content{
    height: 500px;
}
/* -------------------------faqs------------------------------- */


/* -------------------------FOOTER------------------------------- */
.footer{
    overflow: hidden;
    display: flex;
    justify-content: center;
    height: fit-content;
}

.footer .container{
    width: 1000px;
}

.footer .container .email-signup-container{
    width: 1000px;
    display: flex;
    text-align: center;
    flex-direction: column;
    margin-bottom: 40px;
}

.footer .container .email-signup-container h1{
    color: orange;
}

.footer .container .email-signup-container input[type=text]{
    width: 400px;
    height: 35px;
    border-radius: 10px;
    background-color: #181818;
    color: whitesmoke;
    border: 1px solid orange;
    padding-left: 10px;
    outline: none;
}

.footer .container .email-signup-container input[type=text]:focus{
    color: whitesmoke;
}

.footer .container .email-signup-container button{
    font-size: large;
    font-weight: bold;
    width: 100px;
    height: 35px;
    border-radius: 10px;
    background-color: #181818;
    color: whitesmoke;
    border: 1px solid orange;
}

.footer .container .email-signup-container button:hover{
    color: orange;
}

.footer .container .seperate-line{
    width: 100000px;
    height: 1px;
    background-color: gray;
    margin-bottom: 40px;
    transform: translateX(-5000px);
}

.footer .container .push-left{
    float: left;
}

.footer .container .push-right{
    float: right;
}

.footer .container .push-left .logo{
    padding: 5px ;
    width:fit-content;
}

.footer .container .push-right .info{
    margin-top: 10px;
}

.footer .container .push-right .info .socialmedia{
    float: left;
    margin-bottom: 10px;
}

.footer .container .push-right .info .socialmedia .logo{
    margin-right: 15px;
    background-color: whitesmoke;
    border-radius: 20%;
    width:fit-content;
    float: left;
}

.footer .container .push-right .info .socialmedia .logo:hover{
    background-color: orange;
    transition-duration: 0.5s;
    cursor: pointer;
}

.footer .container .push-right .info .socialmedia .logo img{
    transform: translateY(2px);
}

.footer .container .push-right .info table{
    clear: both;
}

.footer .container .push-right .info table td:nth-child(odd){
    vertical-align: top;
    padding-right: 5px;
}

.footer .container .other{
    width: 1000px;
    clear: both;
    text-align: center;
    display: flex;
    justify-content: center;
}

.footer .container .other a{
    color: gray;
    text-decoration: none;
    padding-left: 5px;
    padding-right: 5px;
}

.footer .container .other a:hover{
    color: orange;
    cursor: pointer;
}

.footer .container .other div{
    height: 20px;
    width: 1px;
    background-color: gray;
    transform: translateY(4px);
}

.footer .container .copyright{
    width: 1000px;
    padding: 5px;
    padding-bottom: 15px;
    clear: both;
    text-align: center;
}
/* -------------------------FOOTER------------------------------- */

